--- a/example/src/playground.css
+++ b/example/src/playground.css
@@ -2,8 +2,18 @@
   height: 100%;
   display: grid;
   gap: 8px;
-  grid-template-areas: "editor renderer";
   flex: 1 1 auto;
+  grid-template-rows: 100% calc(100% + 8px);
+  grid-template-areas:
+    "editor"
+    "renderer";
+}
+
+@media (min-width: 764px) {
+  .playground {
+    grid-template-rows: revert;
+    grid-template-areas: "editor renderer";
+  }
 }
 
 .editor-group {
@@ -13,15 +23,31 @@
   gap: 8px;
 }
 
+.editor-label {
+  font-size: 1.25rem;
+  margin-left: 10px;
+  background: rgb(30, 30, 30);
+  color: white;
+  font-family: monospace;
+  position: absolute;
+  text-transform: uppercase;
+
+  padding: 0.1rem;
+
+  transition: padding 0.25s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
 .editor-field {
-  background: white;
+  background: rgba(255, 255, 255);
   flex: 3;
   position: relative;
   isolation: isolate;
 }
 
 .controls {
-  text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 8px;
 }
 
 .renderer {
@@ -34,11 +60,12 @@
 .editor-field,
 .renderer {
   border: none;
-  box-shadow: 0px 0px 1px black;
+  box-shadow: 0px 0px 1px rgba(255, 255, 255);
 }
 
 .run-control {
-  font-size: 1.75rem;
+  min-width: 33.33%;
+  font-size: 1.5rem;
   color: hotpink;
   padding: 12px 16px 16px;
   border: 2px solid hotpink;
@@ -60,7 +87,7 @@
   padding: 10px;
   border: 0;
   width: calc(100% - 20px);
-  height: calc(100% - 20px);
+  height: calc(100% - 20px - 1.5rem);
 }
 
 .editor,
@@ -77,7 +104,7 @@
 .editor + pre {
   /* In the same place */
   position: absolute;
-  top: 0;
+  top: 1.5rem;
   left: 0;
 }
 
@@ -108,5 +135,14 @@
 .editor,
 .editor + pre {
   overflow: auto;
-  white-space: nowrap; /* Allows textarea to scroll horizontally */
+  white-space: pre; /* Allows textarea to scroll horizontally */
+}
+
+/* Highlight label when area is focused */
+.editor:focus {
+  outline: 4px solid coral;
+}
+
+.editor:focus ~ .editor-label {
+  padding: 0.25rem;
 }
